# Apple_Health_Export

./: .editorconfig  .gitignore  LICENSE.txt  README.md  globals.py  parse_and_convert_to_xlsx.py  pyproject.toml
parse_and_convert/: globals.py  to_xlsx.py
src/: globals.py  parse_and_convert_to_json_and_csv.py  parse_and_convert_to_xlsx.py
