[project]
name = "apple-health-export"
version = "0.0.1"
description = "Scripts to parse and convert Apple health data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.13",
]

[tool.ruff.lint]
extend-select = ["I"]
